# prime

./: .gitignore  README.md  pyproject.toml
demo/: ROLE_CENTRALIZATION.md  neurips_demo_plan.md  switch_user.py  system_architecture.md
prime_guardrails/: agent.py  callbacks.py  config.py  observability_tools.py  prompt.py  tools.py
prime_guardrails/data/: tools.py
prime_guardrails/iam/: __init__.py  roles.py
prime_guardrails/logging/: audit.py
prime_guardrails/rules/: compliance_rules.yaml
prime_guardrails/tests/: test_fixes.py  test_safety_layer1.py
